Fix render on iOS, add loading msg

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -6,3 +6,30 @@ svg.cppn-graph text {
   -moz-user-select: none;
   -ms-user-select: none;
 }
+
+.loading {
+   position: fixed;
+   top: 0%;
+   left: 0%;
+   width: 100%;
+   height: 100%;
+   margin: auto;
+   padding: auto;
+   z-index:1001;
+   text-align: center;
+   vertical-align: middle;
+   line-height: 100vh;
+   letter-spacing: 1ex;
+   font-size: 48px;
+   font-weight: bold;
+   font-family: monospace;
+}
+
+.loading span {
+  color: black;
+  background-color: white;
+  opacity: 0.5;
+  border-radius: 1ex;
+  box-shadow: 1ex 1ex 2ex black;
+  padding: 0.5ex;
+}
